--- a/PAWGamesHub/plugin.yml
+++ b/PAWGamesHub/plugin.yml
@@ -6,5 +6,5 @@ website: http://www.pawgames.us/
 commands:
   pet:
     usage: /<command> 
-    description: /pawtest (runs debug test)
+    description: /pet
     permission: paw.hub.pet
