--- a/PAWGamesHub/plugin.yml
+++ b/PAWGamesHub/plugin.yml
@@ -8,3 +8,7 @@ commands:
     usage: /<command>     
     description: /pet
     permission: paw.hub.pet
+  morph:
+    usage: /<command>     
+    description: /pet
+    permission: paw.hub.fall
